
Changes in version 0.7.2
- Use cache for JGeometryXML::Get(string xpath, string &sval)
  so many-thread process startups are much faster
- Fixed bug where $JANA_HOME/plugins was not automatically searched
- Use THREAD_TIMEOUT for first event also if it is larger than
  THREAD_TIMEOUT_FIRST_EVENT


Changes in version 0.7.1p3
- The 0.7.1p2 was missing some of the changes in 0.7.1p1 due to
  some strange error. This corrects that. DON'T USE 0.7.1p2 !!

Changes in version 0.7.1p2
- Fixed bug (hopefully for good this time) that caused programs
  to seg. fault at very end if multiple plugins were used 

Changes in version 0.7.1p1
- Fixed bug in JResourceManager that caused seg. faults if USER
  environment not set and to always use "jana" if it is.
- Moved remnants of autoconf (configure, m4, reconf, ...) into BMS
  to get them out of the way since they are all deprecated.
- Install scripts into bin
- Fixed mkplugin and mkfactory_plugin scripts to work with scons
- Add symbolic link to src directory in installation directory

Changes in version 0.7.1

- Fixed bug that broke janadot
- Fixed bug that intermittedly broke GUIs
- Fixed build system to work on Ubuntu 13 with gcc 4.8.0
- Removed most Makefiles, forcing use of scons from now on
- Fixed problem where xerces was required. Now it's optional again.
- Fixed HDDS_HOME bug in setenv.csh script
- Fixed bug where programs could seg. fault in JApplication destructor when
  a plugin is used.


Changes in version 0.7.0

- Added JThread class to clean up internal bookkeeping. (Simulataneously
  fixed some bugs that may have been causing rare stalls or crashes.)
- Added support for user references
- Switched to scons build system
- Updated janarate plugin to be more useful in determining ultimate event rates
- Replaced use of typeof with __typeof__ to appease c++11 compilers
- Fixed bug where event-starved processing threads chewed up CPU unneccesarily